# dss

./: CITATION.cff  LICENSE  README.md  pauli_strings_30.txt  pauli_strings_bell.txt  pyproject.toml  run_dss.py  setup.cfg
dss/: __init__.py  circuit.py  config.py  cost.py  derandomization.py  gates.py  tensor_contractions.py
