[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dss"
version = "0.1.0"
description = "Derandomized Single-Qubit Simulation Tools"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy"
]
